@@ -2381,38 +2381,168 @@ command to generate the output files.
     <glob pattern="*.pict1"/>
     <glob pattern="*.pict2"/>
   </mime-type>
-  <mime-type type="image/x-macpaint">
-    <_comment>MacPaint Bitmap image</_comment>
-    <glob pattern="*.pntg"/>
+  <mime-type type="application/x-ufraw">
+    <sub-class-of type="text/xml"/>
+    <_comment>UFRaw ID file</_comment>
+    <acronym>UFRaw</acronym>
+    <expanded-acronym>Unidentified Flying Raw</expanded-acronym>
+    <glob pattern="*.ufraw"/>
   </mime-type>
-  <mime-type type="image/x-minolta-mrw">
-    <comment>Minolta raw image</comment>
-    <glob pattern="*.mrw" />
-  </mime-type> 
+  <mime-type type="image/x-dcraw">
+    <_comment>Digital raw image</_comment>
+    <acronym>DCRaw</acronym>
+    <expanded-acronym>Digital camera Raw</expanded-acronym>
+  </mime-type>
+  <mime-type type="image/x-adobe-dng">
+    <sub-class-of type="image/x-dcraw"/>
+    <sub-class-of type="image/tiff"/>
+    <_comment>Adobe Digital Negative</_comment>
+    <acronym>DNG</acronym>
+    <expanded-acronym>Digital Negative</expanded-acronym>
+    <glob pattern="*.dng"/>
+  </mime-type>
+  <!-- Canon has 2 format: CRW and CR2  !-->
+  <!-- CRW is easy !-->
   <mime-type type="image/x-canon-crw">
-    <comment>Canon raw image</comment>
+    <sub-class-of type="image/x-dcraw"/>
+    <_comment>Canon raw image</_comment>
+    <acronym>CRW</acronym>
+    <expanded-acronym>Canon RaW</expanded-acronym>
+    <magic priority="50">
+      <match value="II\x1a\x00\x00\x00HEAPCCDR" type="string" offset="0"/>
+    </magic>
     <glob pattern="*.crw"/>
+  </mime-type>
+  <!-- CR2 is a TIFF !-->
+  <mime-type type="image/x-canon-cr2">
+    <sub-class-of type="image/x-dcraw"/>
+    <sub-class-of type="image/tiff"/>
+    <_comment>Canon raw image</_comment>
+    <acronym>CR2</acronym>
+    <expanded-acronym>Canon Raw 2</expanded-acronym>
     <glob pattern="*.cr2"/>
   </mime-type>
-  <mime-type type="image/x-nikon-nef">
-    <comment>Nikon raw image</comment>
-    <glob pattern="*.nef"/>
+  <mime-type type="image/x-fuji-raf">
+    <sub-class-of type="image/x-dcraw"/>
+    <_comment>Fuji raw image</_comment>
+    <acronym>RAF</acronym>
+    <expanded-acronym>RAw Format</expanded-acronym>
+    <magic priority="50">
+      <match value="FUJIFILMCCD-RAW " type="string" offset="0"/>
+    </magic>
+    <glob pattern="*.raf"/>
   </mime-type>
   <mime-type type="image/x-kodak-dcr">
-    <comment>Kodak raw image</comment>
+    <sub-class-of type="image/x-dcraw"/>
+    <sub-class-of type="image/tiff"/>
+    <_comment>Kodak raw image</_comment>
+    <acronym>DCR</acronym>
+    <expanded-acronym>Digital Camera Raw</expanded-acronym>
     <glob pattern="*.dcr"/>
   </mime-type>
+  <mime-type type="image/x-kodak-k25">
+    <sub-class-of type="image/x-dcraw"/>
+    <sub-class-of type="image/tiff"/>
+    <_comment>Kodak raw image</_comment>
+    <acronym>K25</acronym>
+    <expanded-acronym>Kodak DC25</expanded-acronym>
+    <glob pattern="*.k25"/>
+  </mime-type>
   <mime-type type="image/x-kodak-kdc">
-    <comment>Kodak raw image</comment>
+    <sub-class-of type="image/x-dcraw"/>
+    <sub-class-of type="image/tiff"/>
+    <_comment>Kodak raw image</_comment>
+    <acronym>KDC</acronym>
+    <expanded-acronym>Kodak Digital Camera</expanded-acronym>
     <glob pattern="*.kdc"/>
   </mime-type>
+  <mime-type type="image/x-minolta-mrw">
+    <sub-class-of type="image/x-dcraw"/>
+    <_comment>Minolta raw image</_comment>
+    <acronym>MRW</acronym>
+    <expanded-acronym>Minolta RaW</expanded-acronym>
+    <magic priority="50">
+      <match value="\x00MRM" type="string" offset="0"/>
+    </magic>
+    <glob pattern="*.mrw" />
+  </mime-type>
+  <mime-type type="image/x-nikon-nef">
+    <sub-class-of type="image/x-dcraw"/>
+    <sub-class-of type="image/tiff"/>
+    <_comment>Nikon raw image</_comment>
+    <acronym>NEF</acronym>
+    <expanded-acronym>Nikon Electronic Format</expanded-acronym>
+    <glob pattern="*.nef"/>
+  </mime-type>
   <mime-type type="image/x-olympus-orf">
-    <comment>Olympus raw image</comment>
+    <sub-class-of type="image/x-dcraw"/>
+    <_comment>Olympus raw image</_comment>
+    <acronym>ORF</acronym>
+    <expanded-acronym>Olympus Raw Format</expanded-acronym>
+    <magic priority="50">
+      <!-- an ORF file is basically a TIFF file with a non standard !-->
+      <!-- header IIRO which is not nice since it is only composed  !-->
+      <!-- of ASCII codes. Fortunately, the TIFF header is followed !-->
+      <!-- by the offset of the first TIFF ifd which is always      !-->
+      <!-- 0x00000008 (Little endian) for an ORF                    !-->
+      <match value="IIRO\x08\x00\x00\x00" type="string" offset="0"/>
+    </magic>
     <glob pattern="*.orf"/>
   </mime-type>
-  <mime-type type="image/x-fuji-raf">
-    <comment>Fuji raw image</comment>
-    <glob pattern="*.raf"/>
+  <mime-type type="image/x-panasonic-raw">
+    <sub-class-of type="image/x-dcraw"/>
+    <_comment>Panasonic raw image</_comment>
+    <magic priority="50">
+      <!-- Some kind of TIFF file with a non-standard version in prefix !-->
+      <match value="IIU\x00\x08\x00\x00\x00" type="string" offset="0"/>
+    </magic>
+    <glob pattern="*.raw"/>
+  </mime-type>
+  <mime-type type="image/x-pentax-pef">
+    <sub-class-of type="image/x-dcraw"/>
+    <sub-class-of type="image/tiff"/>
+    <_comment>Pentax raw image</_comment>
+    <acronym>PEF</acronym>
+    <expanded-acronym>Pentax Electronic Format</expanded-acronym>
+    <glob pattern="*.pef"/>
+  </mime-type>
+  <mime-type type="image/x-sigma-x3f">
+    <sub-class-of type="image/x-dcraw"/>
+    <_comment>Sigma raw image</_comment>
+    <acronym>X3F</acronym>
+    <expanded-acronym>X3 Foveon</expanded-acronym>
+      <magic priority="50">
+        <!-- The header is "FOVb" (Foveon) !-->
+        <match value="FOVb" type="string" offset="0">
+          <!-- Followed by a 32bit LSB specifying the version number (major.minor) !-->
+          <match value="0x00FF00FF" type="little32" offset="4" mask="0xFF00FF00" />
+        </match>
+      </magic>
+    <glob pattern="*.x3f"/>
+  </mime-type>
+  <mime-type type="image/x-sony-srf">
+    <sub-class-of type="image/x-dcraw"/>
+    <sub-class-of type="image/tiff"/>
+    <acronym>SRF</acronym>
+    <expanded-acronym>Sony Raw Format</expanded-acronym>
+    <_comment>Sony raw image</_comment>
+    <glob pattern="*.srf"/>
+  </mime-type>
+  <mime-type type="image/x-sony-sr2">
+    <sub-class-of type="image/x-dcraw"/>
+    <sub-class-of type="image/tiff"/>
+    <acronym>SR2</acronym>
+    <expanded-acronym>Sony Raw format 2</expanded-acronym>
+    <_comment>Sony raw image</_comment>
+    <glob pattern="*.sr2"/>
+  </mime-type>
+  <mime-type type="image/x-sony-arw">
+    <sub-class-of type="image/x-dcraw"/>
+    <sub-class-of type="image/tiff"/>
+    <acronym>ARW</acronym>
+    <expanded-acronym>Alpha Raw format</expanded-acronym>
+    <_comment>Sony raw image</_comment>
+    <glob pattern="*.arw"/>
   </mime-type>
   <mime-type type="image/png">
     <_comment>PNG image</_comment>
@@ -2621,6 +2751,10 @@ command to generate the output files.
   <mime-type type="image/x-lws">
     <_comment>LightWave scene</_comment>
     <glob pattern="*.lws"/>
+  </mime-type>
+  <mime-type type="image/x-macpaint">
+    <_comment>MacPaint Bitmap image</_comment>
+    <glob pattern="*.pntg"/>
   </mime-type>
   <mime-type type="image/x-msod">
     <_comment>Office drawing</_comment>
