@@ -1,5 +1,11 @@
 2007-03-08  Christian Neumair  <chris@gnome-de.org>
 
+	* freedesktop.org.xml.in: add a bunch of raw camera image types
+	(#8170). Thanks to Udi Fuchs <udifuchs@gmail.com>, Stanislav Brabec
+	<sbrabec@suse.cz> and Frederic Crozat <fcrozat@mandriva.com>.
+
+2007-03-08  Christian Neumair  <chris@gnome-de.org>
+
 	* freedesktop.org.xml.in: add PKCS#10 certification request type
 	(#10076). Thanks to Pino Toscano <toscano.pino@tiscali.it>.
 
